# readmpo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  setup.py
docs/: Doxyfile
docs/source/: conf.py  index.rst  installation.rst
docs/source/_templates/: pyclass.rst
docs/source/capi/: index.rst
docs/source/pyapi/: index.rst
readmpo/: main.cpp
src/ap3_mpo/: glob.cpp  glob.hpp  help_message.cpp  help_message.hpp  properties.cpp  properties.hpp  query_mpo.cpp
src/old_ap3_mpo/: ap3_xs.cpp  ap3_xs.hpp  declaration.hpp  hdf5_utils.cpp  hdf5_utils.hpp  hdf5_utils.tpp  main.cpp  query_mpo.hpp
src/readmpo/: glob.cpp  glob.hpp  h5_utils.cpp  h5_utils.hpp  h5_utils.tpp  main.cpp  master_mpo.cpp  master_mpo.hpp  nd_array.cpp  nd_array.hpp  query_mpo.cpp  query_mpo.hpp  serializer.hpp  serializer.tpp  single_mpo.cpp  single_mpo.hpp
